fix: copy button visibility

--- a/src/code-block/styles.scss
+++ b/src/code-block/styles.scss
@@ -43,7 +43,7 @@ slot {
     position: absolute;
     top: 1em;
     right: 1em;
-    z-index: 1;
+    z-index: 2;
     opacity: 0;
     transition: opacity 0.3s ease-in-out;
     &.is-disabled {
